--- a/hello.html
+++ b/hello.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
-<html?
+<html>
 	<head>
-		<title>My Webpage!</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<title>Section 119 Webpage!</title>
 	</head>
 	<body>
-		Hello, world!
+		Hello, world! Hello again! Hello a third time!
 	</body>
 </html>
