--- a/hello.html
+++ b/hello.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<title>Section 119 Webpage!</title>
+		<title>Section 119</title>
 	</head>
 	<body>
 		Hello, world! Hello again! Hello a third time!
