Added Unordered List

--- a/hello.html
+++ b/hello.html
@@ -7,6 +7,11 @@
 	<body>
 		<h1>Section 119
 		</h1>
-		Hello, world! Hello again! Hello a third time!
+		Hello, Welcome to Section 119 Web Page.
+		
+		<ul>
+			<li>Labour</li>
+			<li>Working Places</li>
+			<li>Machines</li>
 	</body>
 </html>
