--- a/hello.html
+++ b/hello.html
@@ -9,10 +9,11 @@
 		</h1>
 		Hello, Welcome to Section 119 Web Page.
 		
-		<ol>
+		Please choose one of the following:
+		<ul>
 			<li>Labour</li>
 			<li>Working Places</li>
 			<li>Machines</li>
-		</ol>
+		</ul>
 	</body>
 </html>
