--- a/hello.html
+++ b/hello.html
@@ -7,7 +7,12 @@
 	<body>
 		<h1>Section 119
 		</h1>
+		<img src="logo.png">
 		Hello, Welcome to Section 119 Web Page.
+		<br>
+		</br>
+		<br>
+		</br>
 		<br>
 		</br>
 		Please choose one of the following:
