--- a/size.html
+++ b/size.html
@@ -4,15 +4,14 @@
 		<title>Section 119</title>
 		<style>
 			div {
-				badkground-color: grey;
+				background-color: #dec085;
 				width: 25%;
-				height: 50%;
+				height: 900px;
+				margin: 30px;
+				padding: 20px;
 			}
 		</style>
 	</head>
 	<body>
-		<div>
-			Hello, world!
-		</div>
 	</body>
 </html>
