--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 		</ul>
 		<br>
 		</br>
+		Lientjie Beukman, pappa is baie, baie lief vir jou en vir Delia.
+		XXX
 		<br>
 		</br>
 		<h3><u>Labour</u></h3>
