--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link href="CSS/Layout.css" rel="stylesheet" type="text/css" />
-<link href="CSS/Menu.css" rel="stylesheet" type="text/css" />
+<link href="CSS/layout.css" rel="stylesheet" type="text/css" />
+<link href="CSS/menu.css" rel="stylesheet" type="text/css" />
 <link href="SpryAssets/SpryValidationTextField.css" rel="stylesheet" type="text/css" />
 <link href="SpryAssets/SpryValidationConfirm.css" rel="stylesheet" type="text/css" />
 <style type="text/css">
