--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <link href="CSS/layout.css" rel="stylesheet" type="text/css" />
 <link href="CSS/menu.css" rel="stylesheet" type="text/css" />
@@ -52,7 +52,7 @@ body {
 <div id="Footer"></div>
 
 <div class="box">
-    <center><img src="logo.png" width="50%"/></center>
+    <center><img src="logo.png" width="30%"/></center>
 </div>
 
 <div id="Content">
