--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<link href="CSS/layout.css" rel="stylesheet" type="text/css" />
-<link href="CSS/menu.css" rel="stylesheet" type="text/css" />
-<link href="SpryAssets/SpryValidationTextField.css" rel="stylesheet" type="text/css" />
-<link href="SpryAssets/SpryValidationConfirm.css" rel="stylesheet" type="text/css" />
+<link href="layout.css" rel="stylesheet" type="text/css" />
+<link href="menu.css" rel="stylesheet" type="text/css" />
+<link href="SpryValidationTextField.css" rel="stylesheet" type="text/css" />
+<link href="SpryValidationConfirm.css" rel="stylesheet" type="text/css" />
 <style type="text/css">
 body {
 	background-color: #FFF;
@@ -13,8 +13,8 @@ body {
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width" />
 <title>Sect_119</title>
-<script src="SpryAssets/SpryValidationTextField.js" type="text/javascript"></script>
-<script src="SpryAssets/SpryValidationConfirm.js" type="text/javascript"></script>
+<script src="SpryValidationTextField.js" type="text/javascript"></script>
+<script src="SpryValidationConfirm.js" type="text/javascript"></script>
 </head>
 
 <body>
